<resources>
    <string name="app_name">CurriForYou</string>
    <string name="userId">ewhaian</string>
    <string name="user_nickname">이화연</string>
    <string name="user_student_id">1886531</string>
    <string name="mainMajor">사이버보안전공</string>
    <string name="doubleMajor">컴퓨터공학전공</string>
    <string name="miner">뇌인지과학전공</string>
    <string name="user_phoneNum">010-1886-0531</string>
    <string name="user_email">ewha1886@ewhain.net</string>
    <string name="connected">연결완료</string>
    <string name="connect">연결하기</string>
    <string name="version">4.37.0</string>
    <string name="update">최신 버전</string>
    <string name="navi1">교과과정</string>
    <string name="navi2">찜리스트</string>
    <string name="navi3">강의추천</string>
    <string name="navi4">학점관리</string>
    <string name="navi5">마이페이지</string>

    <string-array name="course_category">
        <item>전공필수</item>
        <item>전공선택</item>
        <item>교양필수</item>
        <item>교양선택</item>
    </string-array>

    <string-array name="semester">
        <item>1학년 1학기</item>
        <item>1학년 2학기</item>
        <item>2학년 1학기</item>
        <item>2학년 2학기</item>
        <item>3학년 1학기</item>
        <item>3학년 2학기</item>
        <item>4학년 1학기</item>
        <item>4학년 2학기</item>
        <item>5학년 1학기</item>
        <item>5학년 2학기</item>
    </string-array>

    <string-array name="feedback_category">
        <item>"교과과정"</item>
        <item>"찜리스트"</item>
        <item>"강의추천"</item>
        <item>"학점관리"</item>
        <item>"마이페이지"</item>
        <item>"기타"</item>
    </string-array>

</resources>