<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="10dp"
    android:layout_marginHorizontal="25dp"
    tools:context=".MyPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="15dp">

        <ImageView
            android:id="@+id/user_photo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ewha_icon"
            android:layout_marginLeft="5dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="15dp">

            <TextView
                android:id="@+id/user_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_nickname"
                android:textColor="@color/black"
                android:textSize="20dp"
                />

            <TextView
                android:id="@+id/user_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_position"
                android:textColor="@color/black"
                android:textSize="15dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">

            <ImageView
                android:id="@+id/btn_infoModification"
                android:layout_width="16dp"
                android:layout_height="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="22dp"
                android:src="@drawable/pencil_icon" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginVertical="15dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_mainMajor"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/mainMajor"
            android:textColor="@color/blue_5"/>

        <Button
            android:id="@+id/btn_doubleMajor"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/doubleMajor"
            android:textColor="@color/blue_5"/>

        <Button
            android:id="@+id/btn_minor"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/miner"
            android:textColor="@color/blue_5"/>

        <Button
            android:id="@+id/btn_addMajor"
            android:layout_width="42dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue_5"
            android:text="+"
            android:textSize="20dp"
            android:textColor="@color/white"/>

    </LinearLayout>

    <View
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginVertical="15dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="휴대폰"
                    android:textColor="@color/black"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/user_phoneNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:text="@string/user_phoneNum"
                    android:textColor="@color/black"
                    android:textSize="13dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="이메일"
                    android:textColor="@color/black"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/user_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:text="@string/user_email"
                    android:textColor="@color/black"
                    android:textSize="13dp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <View
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginVertical="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SNS 계정 연동"
            android:textSize="15dp"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginHorizontal="15dp">

                <ImageView
                    android:id="@+id/naver"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/naver_icon"/>

                <TextView
                    android:id="@+id/naverConnect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/connected"
                    android:layout_marginTop="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginHorizontal="15dp">>

                <ImageView
                    android:id="@+id/google"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/google_icon"/>

                <TextView
                    android:id="@+id/googleConnect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/connect"
                    android:layout_marginTop="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginHorizontal="15dp">>

                <ImageView
                    android:id="@+id/kakao"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/kakao_icon"/>

                <TextView
                    android:id="@+id/kakaoConnect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/connected"
                    android:layout_marginTop="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginHorizontal="15dp">>

                <ImageView
                    android:id="@+id/apple"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/apple_icon"/>

                <TextView
                    android:id="@+id/appleConnect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/connect"
                    android:layout_marginTop="5dp"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <View
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginVertical="15dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/userId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userId"
                android:textSize="13dp"
                android:textColor="@color/gray_4"/>

            <TextView
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="로그아웃"
                android:textSize="13dp"
                android:textColor="@color/black"
                android:layout_marginLeft="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text= "ver"
                android:textSize="13dp"
                android:textColor="@color/gray_4"/>

            <TextView
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text= "@string/version"
                android:textSize="13dp"
                android:textColor="@color/gray_4"
                android:layout_marginHorizontal="5dp"/>

            <TextView
                android:id="@+id/update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text= "@string/update"
                android:textSize="13dp"
                android:textColor="@color/gray_4"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="회원"
                android:textSize="13dp"
                android:textColor="@color/gray_4"/>

            <TextView
                android:id="@+id/unregister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="탈퇴"
                android:textSize="13dp"
                android:textColor="@color/black"
                android:layout_marginLeft="5dp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>